--- a/labs/lab1/index.html
+++ b/labs/lab1/index.html
@@ -1,6 +1,69 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-    <body>
+
+<!-- Put the top of the page -->
+<header>
+
+    <!-- We can put an image in a link -->
+    <a href="home">
+        <img src="img/logo.png" alt="">
+    </a>
+
+    <!-- Navigation block (links to other pages), also semantic! -->
+    <nav>
+        <ul>
+            <li><a href="become-host">Become a Host</a></li>
+            <li><a href="sign-up">Sign up</a></li>
+            <li><a href="log-in">Log in</a></li>
+        </ul>
+    </nav>
+
+<!-- don't forget to close the header tag! -->
+</header>
+
+<head>
+    <title>
         Lab 1
-    </body>
+        <!-- This is a comment. and the above text makes the tab say Lab 1 -->
+    </title>
+</head>
+
+<body>
+    <!-- Your content here! -->
+    <h1>Book unique places to stay and things to do.</h1>
+    <section>
+        <img src="img/house.png" />
+
+        <!-- Size-two heading -->
+        <h2>Extraordinary homes</h2>
+
+        <p>
+           A selection of places to stay verified for quality and design.
+        </p>
+    </section>
+
+    <section>
+        <img src="img/city.png" />
+
+        <!-- Size-two heading -->
+        <h2>Amazing City</h2>
+
+        <p>
+           A place to explore and travel.
+        </p>
+    </section>
+
+    <section>
+        <img src="img/sushimaking.png" />
+
+        <!-- Size-two heading -->
+        <h2>Learn to Make Sushi</h2>
+
+        <p>
+           Sushi is even more delicious when you make it by yourself.
+        </p>
+    </section>
+
+</body>
+
 </html>
