--- a/homeworks/hw2/index.html
+++ b/homeworks/hw2/index.html
@@ -1,6 +1,54 @@
-<!DOCTYPE html>
 <html>
-    <body>
-        Homework 1
-    </body>
+	<head>
+		<link rel="stylesheet" type="text/css"
+href="assets/css/style.css" />
+		<title>Fiddling with shapes</title>
+		<!-- What file should we link in this <head> tag? -->
+	</head>
+<body>
+	<div id="container">
+		<div id="first-row" class="row">
+			<div class="square"></div>
+			<div class="circle green"></div>
+			<div class="square"></div>
+			<div class="circle fancy"></div>
+			<div class="circle"></div>
+		</div>
+
+		<div id="second-row" class="row">
+			<div class="circle"></div>
+			<div class="square fancy"></div>
+			<div class="circle fancy"></div>
+			<div class="circle"></div>
+			<div class="circle fancy green"></div>
+		</div>
+
+		<div id="third-row" class="row">
+			<div class="circle"></div>
+			<div class="circle green"></div>
+			<div class="circle"></div>
+			<div class="square fancy"></div>
+			<div class="square"></div>
+		</div>
+
+		<div id="fourth-row" class="row">
+			<div class="square"></div>
+			<div class="circle"></div>
+			<div class="circle fancy"></div>
+			<div class="circle"></div>
+			<div class="circle"></div>
+		</div>
+
+		<div id="fifth-row" class="row">
+			<div class="circle"></div>
+			<div class="circle fancy"></div>
+			<div class="circle"></div>
+			<div class="square"></div>
+			<div class="circle green"></div>
+		</div>
+
+		<li><a href="design_responses.html">Click to view design responses</a></li>
+		<li><a href="wireframes.html">Click to view wireframe responses</a></li>
+	</div>
+</body>
 </html>
