--- a/homeworks/hw1/index.html
+++ b/homeworks/hw1/index.html
@@ -1,100 +1,37 @@
+<!doctype html>
 <html>
-<head>
-    <title>WDD Homework 1</title>
-    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
-    <link href="https://fonts.googleapis.com/css?family=Karla" rel="stylesheet">
-</head>
-<body>
-	<div id="container">
-		<div id="header">
-			<div id="header-caption">
-				<div id="header-caption-logo"><img class="img-scaled" src="assets/img/logo.png" /></div>
-				<div id="header-caption-name">Web Design DeCal</div>
-				<div class="clear"></div>
-			</div>
-			<div id="header-content">
-				<!-- ASSIGNMENT NAME -->
-				<div id="header-title">Homework 1</div>
-				<!-- DUE DATE -->
-				<div id="header-due">September 22nd</div>
-				<div class="clear"></div>
-			</div>
-		</div>
-		<div class="section">
-			<div class="info">
-				<!-- ASSIGNMENT TITLE -->
-				<div class="info-title">1. Your First Website</div>
-				<div class="info-content">
-					<!-- REQUIRED TOOLS -->
-					<div class="info-required">Required Tool: Text Editor (We recommend VS Code)</div>
-					<!-- INTRODUCTION -->
-					<div class="info-intro">In the programming section, you learned about various HTML tags. In design section, you learned about what makes a good website. Let's do a little more!</div>
-				</div>
-			</div>
-			<div class="body">
-				<p><strong>Before you begin</strong>, please sign up for the Ed page for this class <!-- PIAZZA. UPDATE THIS EACH SEMESTER --> <a href="https://edstem.org/us/courses/28307/discussion/" target="_blank">here</a>. Ed is where you can ask and answer questions about this class and web design in general. It is also where a bunch of important annoucements about the class will be made!</p>
-				<div class="body-header">Assignment</div>
-				<!-- CONTENT -->
+  <head>
+    <title>Homework 1</title>
+  </head>
+  <body>
+    <h1>Jerry Kim</h1>
+    <em>Applied Mathematics, 4th Year</em>
+    <p>
+      Hi! I'm Jerry and I'm from Korea. I've recently finished my military service in the Korean Air Force. I'm also a Challenger TFT player, love watching Netflix, and can spin a pillow with my feet (has to be the right pillow).
+    </p>
+    <ul>
+      <li>Angeline's Louisiana Kitchen</li>
+      <li>Sliver Pizzeria</li>
+      <li>Musashi</li>
+    </ul>
 
-				<!-- Styled Tags; P, UL, LI, .caption, A, IMG-->
-				<!-- Add P Tags for each paragraph -->
-				<!-- Use UL LI Tags for each lists -->
-				<!-- Use P Tags with "caption" class for paragraph captions (60% opacity) -->
-				<!-- Use IMG Tags for images -->
+    <img src="assets/img/selfie.png" alt="picture died :("
+        width="500"
+        height="600"
+    />
 
-				<p class = "caption"><strong>Note:</strong> Please review the <a href="https://docs.google.com/presentation/d/1oqk35zEHSbLjb_I34QGwnO9m7t6M9mEed1EIhkUx26I/edit?usp=sharing" target="_blank">lecture slides</a> before you go through this assignment.</p>
-				<p>In this assignment, You will be creating your first website as well as answering some questions on design.</p>
-				<p>To start off, let's create a folder that will house all our files.</p>
-				<ol>
-					<li>Create a folder (call it whatever you want).</li>
-					<li>Now open up your code editor, create a new file and save it in that folder as <strong>index.html</strong>. By default, a web browser will always open the index.html file in a folder if there are multiple html files.</li>
-					<li>Go back into that folder and create another folder called 'assets'. To keep files organized, we like to make a separate folder specifically for non-html content like images.</li>
-					<li>Within the assets folder, create another folder called 'img' and go place your favorite selfie in that folder.</li>
-				</ol>
-				<p>Now that your workspace is all set up, you are ready to start making your very first website. If you double click on the index.html file right now, it should open a blank page on your default browser (we recommend Google Chrome). When you make changes to your code, you can refresh that page to see the changes.</p>
-				<p>Now try doing the following steps. You'll notice that we encourage you to google things!</p>
-				<ol>
-					<li>Write your name in huge, bold text. <em>(Hint: look at the "Headings" slide)</em></li>
-					<li>On the next line, write your major and year in italic text. <em>(Hint: "Bold and italic text" slide)</em></li>
-					<li>Add a paragraph about yourself. <em>(Hint: "Text" slide)</em></li>
-					<li>Create a bulleted list of your three favorite places to eat in Berkeley. <em>(Hint: "Lists" slide)</em></li>
-					<li>Add a picture of yourself so we can recognize you in class! <em>(Hint: "Images" slide)</em></li>
-					<li>Add a link that, when clicked, directs you to the your favorite website. The text within the link should be the name of the website. <em>(Hint: "Links" slide)</em></li>
-				</ol>
+    <a href="https://www.twitch.tv">
+      <br>
+      <br>
+      Favorite Website
+    </a>
 
-				<p>
-					<strong>Some common troubleshooting:</strong>
-					<ul>
-						<li>Images not showing up? Make sure that in the img tag, you match the image name <em>exactly, including capitalization</em>. .jpg and .JPG are not the same! We recommend keeping all image file names in <strong>lowercase</strong> for consistency. Make sure image types are also matched: .png and .jpg are not the same!</li>
-					</ul>
-				</p>
-				<p class="caption">If you are lost during this assignment, do not fret! Post to Ed or come to office hours.</p>
-				<p>Your first website should look something like this:</p>
-				<img class="img-scaled" src="assets/img/example1.png"/>
-        <h2>Part 2: Reading Responses</h2>
-        <p>In this part of the assignment, you will be reading <a href="https://uxdesign.cc/how-to-develop-an-eye-for-design-c5a4c64bb26c" target="_blank">this article</a> related to web design principles and responding to a few questions. The purpose of this section is to prompt design thinking and awareness -- we are a design course, after all.</p>
-        <p>Please answer the following questions and add your responses to your index.html using <strong>a list</strong> (Hint: 'ul' tag).</p>
-        <ol>
-          <li>What is something you learned from this article? (2-3 sentences)</li>
-          <li>What was your favorite part of this article? (2-3 sentences)</li>
-          <li>Copy and paste a quote you found compelling, interesting, or cool.</li>
-          <li>On a scale from 1 to 10, how much did you enjoy reading this article? If you scored below a five, please briefly explain why.</li>
-        </ol>
-			</div>
-		</div>
-		<div id="submission">
-			<div id="submission-header">Submission</div>
-			<div id="submission-content">
-				<p>Submit your files to your GitHub Submission Repository by copying all the files into the hw1 folder of your submission repository (replace the index.html originally in it).
-					In your terminal, from your GitHub Submission Repository, run the following Git commands:</p>
-				<ul>
-					<li>git add -A</li>
-					<li>git commit -m 'finished hw1'</li>
-					<li>git push</li>
-				</ul>
-				<p>This assignment is due <strong>Thursday, September 22nd</strong> at <strong>8:00PM PST</strong>.</p>
-			</div>
-		</div>
-	</div>
-</body>
+    <ul>
+      <li>I learned that one of the best ways to learn design is by observing others' products. It's also important to think about the user's perspective when designing anything.</li>
+      <li>My favorite part about the article were pictures showing each feature through animations. It made it easier focus on each individual part and look at the details.</li>
+      <li>"...be curious about everything you see..."</li>
+      <li>7</li>
+    </ul>
+
+  </body>
 </html>
