made a small change to hw1

--- a/homeworks/hw1/index.html
+++ b/homeworks/hw1/index.html
@@ -26,6 +26,7 @@
       Favorite Website
     </a>
 
+    <h1>Reading Response</h1>
     <ul>
       <li>I learned that one of the best ways to learn design is by observing others' products. It's also important to think about the user's perspective when designing anything.</li>
       <li>My favorite part about the article were pictures showing each feature through animations. It made it easier focus on each individual part and look at the details.</li>
