--- a/labs/lab2/index.html
+++ b/labs/lab2/index.html
@@ -1,6 +1,45 @@
-<!DOCTYPE html>
 <html>
-    <body>
-        Lab 1
-    </body>
+  <head>
+    <link href="https://fonts.googleapis.com/css?family=Karla&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
+    <title>WDD-bnb</title>
+  </head>
+  <body>
+    <header>
+      <div class="content">
+        <a href="home">
+          <img src="img/logo.png" alt="" id="logo"/>
+        </a>
+        <nav>
+          <ul>
+            <li><a href="become-host">Become a Host</a></li>
+            <li><a href="sign-up">Sign up</a></li>
+            <li><a href="log-in">Log in</a></li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+
+    <h1>Book unique places to stay and things to do.</h1>
+    <section>
+      <img src="img/house.png" />
+      <h2>Extraordinary homes</h2>
+      <p>
+        A selection of places to stay verified for quality and design. Find
+        top-rated places to stay with amenities you need.
+      </p>
+    </section>
+    <section>
+      <img src="img/city.png" />
+      <h2>Places to stay around the world</h2>
+      <p>Explore a new city on your next trip!</p>
+    </section>
+    <section>
+      <img src="img/sushimaking.png" />
+      <h2>Top-rated experiences</h2>
+      <p>
+        Book one-of-a-kind activities hosted by locals, created for the curious.
+      </p>
+    </section>
+  </body>
 </html>
