finished hw3 for real

--- a/homeworks/hw3/index.html
+++ b/homeworks/hw3/index.html
@@ -1,6 +1,52 @@
 <!DOCTYPE html>
 <html>
-    <body>
-        Homework 1
-    </body>
+	<head>
+		<!-- PROBLEM 0:
+		Link the CSS stylesheet called style.css found in the assets/css folder -->
+		<link rel="stylesheet" href="assets/css/style.css">
+		<link rel="stylesheet" type="text/css" href="assets/css/initial.css">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta charset="utf-8">
+		<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+	</head>
+	<body>
+		<div id="content">
+			<div id="navbar">
+				<div class="navbar-item">Home</div>
+				<div class="navbar-item">Discover</div>
+				<div class="navbar-item">Profile</div>
+		</div>
+		<div id="header">
+			<div id="profile-pic">
+				<img src= "assets/img/selfie.png"/>
+			</div>
+			<div id="information">
+				<div id="username">Jerry Kim</div>
+				<div id="follow-button">+ Follow</div>
+				<div id="about">
+					<!-- Replace the lorem ipsum filler text and write your about me here! -->
+					I can spin a pillow with my feet.
+				</div>
+			</div>
+		</div>
+		<div id="pictures">
+			<div class="row">
+				<div class="item"><img src= "assets/img/1.JPG"></div>
+				<div class="item"><img src= "assets/img/2.JPG"></div>
+				<div class="item"><img src= "assets/img/3.JPG"></div>
+			</div>
+			<div class="row">
+				<div class="item"><img src= "assets/img/4.JPG"></div>
+				<div class="item"><img src= "assets/img/5.JPG"></div>
+				<div class="item"><img src= "assets/img/6.JPG"></div>
+			</div>
+			<div class="row">
+				<div class="item"><img src= "assets/img/7.JPG"></div>
+				<div class="item"><img src= "assets/img/8.JPG"></div>
+				<div class="item"><img src= "assets/img/9.JPG"></div>
+			</div>
+		</div>
+		</div>
+	<a href="design_responses.html" id="design">Click to view design responses</a>
+</body>
 </html>
