--- a/labs/lab3/index.html
+++ b/labs/lab3/index.html
@@ -1,6 +1,45 @@
-<!DOCTYPE html>
 <html>
-    <body>
-        Lab 1
-    </body>
+
+<head>
+	<title>Lab 3 Mockups and Responses</title>
+	<link rel="stylesheet" type="text/css" href="assets/css/wdd.css">
+	<link href="https://fonts.googleapis.com/css?family=Karla" rel="stylesheet">
+</head>
+
+<body>
+	<div id="container">
+		<div class="section">
+			<div class="info">
+				<div class="info-title">Lab 3 High-Fidelity Mockups</div>
+				<div class="info-content">
+					<div class="info-required">Instructions</div>
+					<div class="info-intro">Insert your Rumblecusp mockup (travel site) down below. <strong> REMINDER:
+							Please do not use any of the graphics or images from lab outside of this assignment (i.e. do
+							not plagiarize our work).
+							Thanks! </strong></div>
+				</div>
+			</div>
+			<div class="body">
+				<div class="body-header">Mockups</div>
+				<br>
+				<ul>
+					<p> After you complete the Figma tutorial and make it look like this: </p>
+					<img class="img-scaled" src="assets/img/origscreen.png" />
+					<p> Go to Layers (on the left side of the screen in Figma) and in the "illustration" group
+						you should find a rectangle called "back color." Select it and change the color to green
+						(any shade as long as it's sort of visible through the gradient). </p>
+
+					<li>
+						<p>Export the frame (hint: see bottom of the menu on the right) and insert it below.</p>
+						<p> <img src="assets/img/High Fidelity.png" alt=""> </p>
+						<p>Set your Figma page to "anyone with a link can view" and past the sharing link below.</p>
+						<p> https://www.figma.com/file/jgghL5qX5o6Ph18HZypN0A/figmatutorial </p>
+					</li>
+					<p>And that's it! :)</p>
+				</ul>
+			</div>
+		</div>
+	</div>
+</body>
+
 </html>
