--- a/homeworks/hw4/index.html
+++ b/homeworks/hw4/index.html
@@ -1,6 +1,62 @@
 <!DOCTYPE html>
 <html>
-    <body>
-        Homework 1
-    </body>
+	<head>
+		<link rel="stylesheet" type="text/css" href="assets/css/style.css">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta charset="utf-8">
+		<link rel="stylesheet"
+		  href="https://fonts.googleapis.com/css?family=Merriweather">
+		<link rel="stylesheet"
+			href="https://fonts.googleapis.com/css?family=Oswald">
+	</head>
+	<body>
+		<header>
+			<div class="content">
+				<div id="title">Travel Blog</div>
+			</div>
+		</header>
+
+		<div id="image-banner"></div>
+
+		<div class="content">
+			<section id="post">
+				<h1>Blog Post Title</h1>
+				<h2>March 2, 2021</h2>
+				<p>
+					<a href="design_responses.html">Reading responses here.</a>
+				</p>
+				<p>
+					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam non sem ut nunc rutrum dictum. In euismod nibh eu rhoncus placerat. Proin volutpat in orci eu lacinia. Integer placerat mauris laoreet, laoreet neque non, facilisis erat. Sed sit amet blandit arcu. Mauris finibus mattis erat, a pellentesque neque. Sed tempor tortor sit amet erat tincidunt tempus. Vivamus molestie neque a porta tristique. Vivamus egestas dolor libero, in dapibus nisl cursus ac. Nulla sit amet ex vitae massa consequat interdum vitae sit amet neque. Morbi efficitur turpis arcu, a feugiat velit posuere et. Aenean venenatis, nunc a gravida euismod, ipsum augue efficitur sapien, eget pretium sapien sem ut dolor. Ut pretium sodales felis, et tristique nisl. Pellentesque id iaculis nibh, vitae consectetur ex. Duis interdum dolor eget sapien maximus, eu malesuada magna ultricies. Nunc eget quam lacinia, mattis quam et, sollicitudin massa.
+				</p>
+				<p>
+					Ut pulvinar nunc nisi, ac tempus felis ornare sed. Integer vel sapien elementum, ultrices ante in, fermentum est. Nulla in facilisis nibh, quis tempor lorem. Morbi rhoncus sed magna non vulputate. Phasellus et semper enim. Donec porta ex nisl, quis malesuada leo congue a. Nulla pulvinar luctus malesuada. Mauris laoreet libero mi, a rhoncus mi volutpat efficitur. Maecenas velit augue, venenatis at euismod quis, euismod id lectus. Sed finibus vestibulum congue.
+				</p>
+				<p>
+					Ut eget purus eget augue pharetra ullamcorper viverra in nisl. Integer egestas aliquet mauris eu vehicula. Integer iaculis enim vitae varius euismod. Aliquam blandit varius vulputate. Vestibulum commodo vulputate dolor ut rhoncus. Integer gravida mi sit amet urna blandit, non convallis arcu aliquam. Vivamus dignissim ac nibh ut vehicula. Suspendisse potenti. Morbi sit amet consequat ex. Duis imperdiet nulla et nisi ullamcorper laoreet. Mauris a rhoncus ligula. Aliquam consectetur pharetra ex eget viverra. Nullam convallis tortor risus, id sagittis nibh egestas ac. In auctor risus mauris, in venenatis nisl auctor ac.
+				</p>
+			</section>
+
+			<section id="other-posts">
+				<h3>Enjoyed this? Also see</h3>
+
+				<div class="image-card">
+					<a href="#">
+						<img src="assets/img/seattle.jpg" alt="">
+						<div class="image-card-color-overlay"></div>
+						<div class="image-card-text">Seattle</div>
+					</a>
+				</div>
+
+				<div class="image-card">
+					<a href="#">
+						<img src="assets/img/nyc.jpg" alt="">
+						<div class="image-card-color-overlay"></div>
+						<div class="image-card-text">New York City</div>
+					</a>
+				</div>
+			</section>
+
+		</div>
+
+	</body>
 </html>
