--- a/homeworks/hw5/index.html
+++ b/homeworks/hw5/index.html
@@ -1,6 +1,217 @@
 <!DOCTYPE html>
-<html>
-    <body>
-        Homework 1
-    </body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>WDD Flexbox bCourses</title>
+    <link rel="stylesheet" href="assets/css/wdd.css">
+    <!-- FIXME: Find and add the "Lato" font from Google fonts. -->
+    <link rel="stylesheet"href="https://fonts.googleapis.com/css?family=Lato:300">
+    <link rel="stylesheet" href="assets/css/style.css">
+
+</head>
+<body>
+    <div class="nav">
+        <!-- FIXME: Make the menu icons appear by adding the
+                correct filepath within the blank src. -->
+        <div class="nav--button nav-button---logo">
+            <img id="logo" src="assets/img/logo.png" alt="">
+        </div>
+        <div class="nav--button nav--button--account">
+            <img src="assets/img/account.png" alt="">
+            Account
+        </div>
+        <div class="nav--button nav--button--home">
+            <img src="assets/img/dashboard.png" alt="">
+            Dashboard
+        </div>
+        <div class="nav--button nav--button--courses">
+            <img src="assets/img/courses.png" alt="">
+            Courses
+        </div>
+        <div class="nav--button nav--button--calendar">
+            <img src="assets/img/calendar.png" alt="">
+            Calendar
+        </div>
+        <div class="nav--button nav--button--inbox">
+            <img src="assets/img/inbox.png" alt="">
+            Inbox
+        </div>
+        <div class="nav--button nav--button--reading">
+            <img src="assets/img/reading.png" alt="">
+              Reading
+        </div>
+    </div>
+    <div class="main">
+        <div class="dashboard">
+            <div class="dashboard--title">
+                <h1>Dashboard</h1>
+                <div class="dashboard--title__dots">
+                <!-- FIXME: Make the button icon appear by adding the
+                    correct filepath within the blank src. -->
+                    <img src="assets/img/menu.png" alt="dots">
+                </div>
+            </div>
+            <div class="dashboard--classes">
+                <div class="dashboard--classes__box dashboard--classes__box__1">
+                    <div class="dashboard--classes__box__image"></div>
+                    <div class="dashboard--classes__box__description">
+                        <div class="dashboard--classes__box__controls__text">
+                            <h2>Web Design Decal</h2>
+                            <h3>CS 198 - lec 001</h3>
+                            <h4>Spring 2020</h4>
+                        </div>
+                        <div class="dashboard--classes__box__controls__buttons">
+                            <img src="assets/img/announcements.png" class="dashboard--classes__box__controls__buttons--announcements">
+                            <img src="assets/img/assignment.png" class="dashboard--classes__box__controls__buttons--assignment">
+                            <img src="assets/img/chat.png" class="dashboard--classes__box__controls__buttons--chat">
+                            <img src="assets/img/files.png" class="dashboard--classes__box__controls__buttons--files">
+                        </div>
+                    </div>
+                </div>
+                <div class="dashboard--classes__box dashboard--classes__box__2">
+                    <div class="dashboard--classes__box__image"></div>
+                    <div class="dashboard--classes__box__description">
+                        <div class="dashboard--classes__box__controls__text">
+                            <h2>Web Design Decal</h2>
+                            <h3>CS 198 - lec 001</h3>
+                            <h4>Spring 2020</h4>
+                        </div>
+                        <div class="dashboard--classes__box__controls__buttons">
+                            <img src="assets/img/announcements.png" class="dashboard--classes__box__controls__buttons--announcements">
+                            <img src="assets/img/assignment.png" class="dashboard--classes__box__controls__buttons--assignment">
+                            <img src="assets/img/chat.png" class="dashboard--classes__box__controls__buttons--chat">
+                            <img src="assets/img/files.png" class="dashboard--classes__box__controls__buttons--files">
+                        </div>
+                    </div>
+                </div>
+
+                <div class="dashboard--classes__box dashboard--classes__box__3">
+                    <div class="dashboard--classes__box__image"></div>
+                    <div class="dashboard--classes__box__description">
+                        <div class="dashboard--classes__box__controls__text">
+                            <h2>Web Design Decal</h2>
+                            <h3>CS 198 - lec 001</h3>
+                            <h4>Spring 2020</h4>
+                        </div>
+                        <div class="dashboard--classes__box__controls__buttons">
+                            <img src="assets/img/announcements.png" class="dashboard--classes__box__controls__buttons--announcements">
+                            <img src="assets/img/assignment.png" class="dashboard--classes__box__controls__buttons--assignment">
+                            <img src="assets/img/chat.png" class="dashboard--classes__box__controls__buttons--chat">
+                            <img src="assets/img/files.png" class="dashboard--classes__box__controls__buttons--files">
+                        </div>
+                    </div>
+                </div>
+
+                <div class="dashboard--classes__box dashboard--classes__box__4">
+                    <div class="dashboard--classes__box__image"></div>
+                    <div class="dashboard--classes__box__description">
+                        <div class="dashboard--classes__box__controls__text">
+                            <h2>Web Design Decal</h2>
+                            <h3>CS 198 - lec 001</h3>
+                            <h4>Spring 2020</h4>
+                        </div>
+                        <div class="dashboard--classes__box__controls__buttons">
+                            <img src="assets/img/announcements.png" class="dashboard--classes__box__controls__buttons--announcements">
+                            <img src="assets/img/assignment.png" class="dashboard--classes__box__controls__buttons--assignment">
+                            <img src="assets/img/chat.png" class="dashboard--classes__box__controls__buttons--chat">
+                            <img src="assets/img/files.png" class="dashboard--classes__box__controls__buttons--files">
+                        </div>
+                    </div>
+                </div>
+
+                <div class="dashboard--classes__box dashboard--classes__box__5">
+                    <div class="dashboard--classes__box__image"></div>
+                    <div class="dashboard--classes__box__description">
+                        <div class="dashboard--classes__box__controls__text">
+                            <h2>Web Design Decal</h2>
+                            <h3>CS 198 - lec 001</h3>
+                            <h4>Spring 2020</h4>
+                        </div>
+                        <div class="dashboard--classes__box__controls__buttons">
+                            <img src="assets/img/announcements.png" class="dashboard--classes__box__controls__buttons--announcements">
+                            <img src="assets/img/assignment.png" class="dashboard--classes__box__controls__buttons--assignment">
+                            <img src="assets/img/chat.png" class="dashboard--classes__box__controls__buttons--chat">
+                            <img src="assets/img/files.png" class="dashboard--classes__box__controls__buttons--files">
+                        </div>
+                    </div>
+                </div>
+
+                <div class="dashboard--classes__box dashboard--classes__box__6">
+                    <div class="dashboard--classes__box__image"></div>
+                    <div class="dashboard--classes__box__description">
+                        <div class="dashboard--classes__box__controls__text">
+                            <h2>Web Design Decal</h2>
+                            <h3>CS 198 - lec 001</h3>
+                            <h4>Spring 2020</h4>
+                        </div>
+                        <div class="dashboard--classes__box__controls__buttons">
+                            <img src="assets/img/announcements.png" class="dashboard--classes__box__controls__buttons--announcements">
+                            <img src="assets/img/assignment.png" class="dashboard--classes__box__controls__buttons--assignment">
+                            <img src="assets/img/chat.png" class="dashboard--classes__box__controls__buttons--chat">
+                            <img src="assets/img/files.png" class="dashboard--classes__box__controls__buttons--files">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="notifications">
+            <img src="assets/img/bcourses.png" alt="">
+            <div class="notifications__todo--title">
+                <h2>To Do</h2>
+            </div>
+            <div class="notifications__notifs">
+                <div class="notifications__notifs--box">
+                    <img src="assets/img/announcements.png" alt="">
+                    <div class="notifications__notifs--text">
+                        <h1>Homework #5!</h1>
+                        <h2>Web Design Decal</h2>
+                        <h3>March 10, 2020 at 11:59 PM</h3>
+                    </div>
+                </div>
+                <div class="notifications__notifs--box">
+                    <img src="assets/img/announcements.png" alt="">
+                    <div class="notifications__notifs--text">
+                        <h1>Group Project Check-in</h1>
+                        <h2>Web Design Decal</h2>
+                        <h3>March 5, 2020</h3>
+                    </div>
+                </div>
+                <div class="notifications__notifs--box">
+                    <img src="assets/img/announcements.png" alt="">
+                    <div class="notifications__notifs--text">
+                        <h1>Group Project Due</h1>
+                        <h2>Web Design Decal</h2>
+                        <h3>March 17, 2020 at 11:59 PM</h3>
+                    </div>
+                </div>
+                <div class="notifications__notifs--box">
+                    <img src="assets/img/announcements.png" alt="">
+                    <div class="notifications__notifs--text">
+                        <h1>Another Anouncement!</h1>
+                        <h2>Not Web Design Decal</h2>
+                        <h3>March 39, 2028 at 11:59 PM</h3>
+                    </div>
+                </div>
+                <div class="notifications__notifs--box">
+                    <img src="assets/img/announcements.png" alt="">
+                    <div class="notifications__notifs--text">
+                        <h1>Another Anouncement!</h1>
+                        <h2>Not Web Design Decal</h2>
+                        <h3>March 39, 2028 at 11:59 PM</h3>
+                    </div>
+                </div>
+                <div class="notifications__notifs--box">
+                    <img src="assets/img/announcements.png" alt="">
+                    <div class="notifications__notifs--text">
+                        <h1>Another Anouncement!</h1>
+                        <h2>Not Web Design Decal</h2>
+                        <h3>March 39, 2028 at 11:59 PM</h3>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+</body>
 </html>
