--- a/midterm/index.html
+++ b/midterm/index.html
@@ -19,9 +19,9 @@
 			<div id="title">Gypsy's Trattoria Italiana</div>
 			<!-- Menu -->
 			<ul class= "menu">
-					<li><a href="index1.html">Home</a></li>
+					<li><a href="index.html">Home</a></li>
 					<li><a href="index2.html">Menu</a></li>
-					<li><a href="index1.html">About</a></li>
+					<li><a href="index.html">About</a></li>
 			</ul>
 		</nav>
 
