--- a/homeworks/hw6/index.html
+++ b/homeworks/hw6/index.html
@@ -1,6 +1,53 @@
 <!DOCTYPE html>
 <html>
-    <body>
-        Homework 1
-    </body>
+	<head>
+		<title>WDD Homework 6</title>
+		<link href="https://fonts.googleapis.com/css?family=Karla:400,700" rel="stylesheet">
+		<link rel="stylesheet" type="text/css" href="assets/css/foundation.css"/>
+		<link rel="stylesheet" type="text/css" href="assets/css/style.css"/>
+	</head>
+	<body>
+		<div id="root">
+			<h1>WDD Homework 6: Loading Animations</h1>
+			<a id="response" href="design_responses.html">Design Response</a>
+			<div id="loaders">
+				<div class="loader-container">
+					<div class="loader-card">
+          							<!--Loader 1 goes here!-->
+												<div class="loader one">
+    												<div class="first circle"></div>
+    												<div class="second circle"></div>
+												</div>
+          </div>
+					<div class="bg"></div>
+				</div>
+				<div class="loader-container">
+					<div class="loader-card">
+                        <!--Loader 2 goes here!-->
+												<div class="loader two">
+    											<div class="first dot"></div>
+    											<div class="second dot"></div>
+    											<div class="third dot"></div>
+												</div>
+                    </div>
+					<div class="bg"></div>
+				</div>
+				<div class="loader-container">
+					<div class="loader-card">
+                        <!--Loader 3 goes here!-->
+												<div class="loader three">
+													<div class="flip-tile"></div>
+												</div>
+                    </div>
+					<div class="bg"></div>
+				</div>
+				<div class="loader-container">
+					<div class="loader-card">
+                        <!--Loader 4 goes here!-->
+                    </div>
+					<div class="bg"></div>
+				</div>
+			</div>
+		</div>
+	</body>
 </html>
