--- a/labs/lab7/index.html
+++ b/labs/lab7/index.html
@@ -1,6 +1,17 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-    <body>
-        Lab 1
-    </body>
+
+<head>
+  <meta charset="utf-8">
+  <title>WDD Lab 7</title>
+</head>
+
+<body>
+  <p>Question 1: https://nytimes.wd5.myworkdayjobs.com/Tech</p>
+  <p>Question 2: nyt-cheltenham, georgia, "times new roman", times, serif</p>
+  <img src="website.png" alt="">
+  <img src="console.png" alt="">
+</body>
+
 </html>
+<!-- @webdesigndecal/mark2html@0.0.11 -->
