--- a/homeworks/hw8/index.html
+++ b/homeworks/hw8/index.html
@@ -1,6 +1,55 @@
-<!DOCTYPE html>
 <html>
-    <body>
-        Homework 1
-    </body>
+<head>
+	<link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="assets/css/style.css">
+	<title>Homework 8 - Favorite Songs</title>
+</head>
+
+<body>
+
+<div class="content">
+	<h1>Favorites</h1>
+
+	<!-- Problem 3.1 -->
+	<div id="songs">
+		<ul id="songs-first-half">
+			<li>
+				<div class="song-title">Love Sick Girls</div>
+				<div class="song-artist">Blackpink</div>
+			</li>
+			<li>
+				<div class="song-title">Ganadara (Feat. IU)</div>
+				<div class="song-artist">Jay Park</div>
+			</li>
+			<li>
+				<div class="song-title">Loco</div>
+				<div class="song-artist">Itzy</div>
+			</li>
+		</ul>
+		<ul id="songs-second-half">
+			<li>
+				<div class="song-title">Enemy</div>
+				<div class="song-artist">Imagine Dragons</div>
+			</li>
+			<li>
+				<div class="song-title">Natural</div>
+				<div class="song-artist">Imagine Dragons</div>
+			</li>
+			<li>
+				<div class="song-title">Warriors</div>
+				<div class="song-artist">Imagine Dragons</div>
+			</li>
+		</ul>
+	</div>
+
+	<button id="toggle-button">Show 3 songs</button>
+	<p>
+		<a href="design_responses.html" style = "color: white"id = "design-response-link">Design Responses Here</a>
+	</p>
+</div>
+
+<script src="assets/js/script.js"></script>
+
+</body>
+
 </html>
